--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ vignettes/*.pdf
 
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
+
+# Folders
+Relatorios e Scripts-20181116/
